fixed some layout issues

--- a/content/css/stylesheet.scss
+++ b/content/css/stylesheet.scss
@@ -28,7 +28,7 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
 ins { background: #ff9; color: #000; text-decoration: none; }
 mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
 pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
+pre { white-space: pre; }
 q { quotes: none; }
 q:before, q:after { content: ""; content: none; }
 small { font-size: 85%; }
@@ -108,6 +108,7 @@ h1 { margin: 5px 0 10px 0; }
 #main {
   h2 { margin: 0.6em 0 0.4em 0; }
   h3 { margin: 0.5em 0 0.3em 0; }
+  h4 { margin: 0.3em 0; }
 }
 
 h2 { font-size: 175%; }
@@ -252,11 +253,9 @@ footer {
 
 #archive {
   .title { font-size: 130%; }
-  .post-preview{ position: relative; }
   .post-date{
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    display: inline-block;
+    vertical-align: top;
     width: 48px;
     height: 48px;
     margin: 4px;
@@ -275,17 +274,14 @@ footer {
       line-height: 95%;
     }
     .number, .suffix {
-      font-family: Georgia, Times, "Times New Roman", serif;
+      font-family: Geneva, Tahoma, Verdana, sans-serif;
       color: white;
-      font-weight: bold;
     }
     .number { font-size: 160%; }
-    .suffix { font-size: 140%; }
+    .suffix { font-size: 110%; }
   }
   .post-preview-content { 
-    position: absolute; 
-    top: 4px;
-    left: 80px;
+    display: inline-block;
     width: 530px;
   }
 }
@@ -425,6 +421,7 @@ article {
 a.button-link { 
   display: inline-block;
   color: inherit;
+  &:hover{ text-decoration: none; }
   &:hover .button-link-title{ text-decoration: underline; }
   .button-link-title { color: #00E; }
   &:visited .button-link-title { color: darkViolet; }
